--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/g10.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shopStore</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="aKcfIYEgsnQPYe58vxI8VTqxrKQKR1__kaloA5yXxK8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/g10.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>ShopStore — Online Shopping Platform</title>
+
+  <!-- SEO -->
+  <meta name="description"
+    content="ShopStore — arzon narxlar, tez yetkazib berish, sifatli mahsulotlar va oson xarid. Online shopping platformasi.">
+  <meta name="keywords" content="shopstore, online shop, shopping, buy online, ecommerce, store, market">
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="ShopStore" />
+
+  <!-- Social Share (Open Graph) -->
+  <meta property="og:title" content="ShopStore — Online Shopping">
+  <meta property="og:description" content="Eng yaxshi onlayn shopping platformasi — ShopStore.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://shopstore-client.vercel.app">
+  <meta property="og:image" content="https://shopstore-client.vercel.app/preview-image.svg" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://shopstore-client.vercel.app" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
